<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">dapp</string>
    <string name="name">Name</string>
    <string name="username">Username</string>
    <string name="date_of_birth">Date of birth</string>
    <string name="occupation">Occupation</string>
    <string name="submit">Submit</string>
    <string name="dd_mm_yyyy">DD/MM/YYYY</string>
    <string name="add_your_description_here">Add your description here</string>
    <string name="textview">TextView</string>
    <string name="toast">a value is missing!</string>
    <string name="create_account">Create Account</string>


    <string name="action_settings">Settings</string>
    <string name="item_title">Palais Garnier</string>
    <string name="item_desc">The Palais Garnier which locates in Paris was built from 1861 for
        the Paris Opera.
    </string>
    <string name="detail_desc">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
        eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis
        nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute
        irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
        pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia
        deserunt mollit anim id est laborum.
    </string>
    <string name="detail_location">"8 Rue Scribe, 75009 Paris, France"</string>
    <string name="like_button">like button</string>
    <string name="a_picture">a picture</string>
    <string name="max_age">max. age</string>
    <string name="email">Email</string>
    <string name="min_age">min. age</string>
    <string name="public_or_private">public or private</string>
    <string name="max_distance">Max Distance</string>
    <string name="male_female">Male | Female</string>

    <string name="distancemsg" formatted="false">Distance: %1$s miles</string>
    <string name="person_name">person name</string>
    <string name="min_distance">Min Distance</string>
    <string name="daily_reminder_times">Daily Reminder Times</string>
    <string name="save">Save</string>
    <string name="pencil">pencil</string>
</resources>