<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="@dimen/card_height"
    android:layout_gravity="center"
    android:layout_marginBottom="@dimen/md_keylines"
    android:layout_marginLeft="@dimen/md_keylines"
    android:layout_marginRight="@dimen/md_keylines"
    android:foreground="?attr/selectableItemBackground">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/card_image"
            android:layout_width="match_parent"
            android:layout_height="@dimen/card_image_height"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:contentDescription="@string/a_picture"
            android:scaleType="centerInside"
            app:srcCompat="@drawable/a"
            tools:src="@drawable/a" />

        <TextView
            android:id="@+id/card_title"
            android:layout_width="match_parent"
            android:layout_height="@dimen/card_title_height"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"
            android:layout_marginBottom="16dp"
            android:contentDescription="@string/person_name"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:textColor="@color/colorAccent"
            tools:text="@string/item_title" />

        <TextView
            android:id="@+id/card_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/card_image"
            android:layout_marginBottom="@dimen/md_keylines"
            android:layout_marginLeft="@dimen/md_keylines"
            android:layout_marginRight="@dimen/md_keylines"
            android:layout_marginTop="@dimen/md_keylines"
            android:ellipsize="end"
            android:singleLine="true"
            android:textColor="@color/dark_grey"
            android:textSize="@dimen/article_subheading"
            tools:text="@string/item_desc" />

        <ImageButton
            android:id="@+id/favorite_button"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="45dp"
            android:layout_height="@dimen/cards_button_height"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="29dp"
            android:clickable="true"
            android:contentDescription="@string/like_button"
            android:tint="@color/button_grey"
            app:srcCompat="@drawable/ic_favorite" />

        <TextView
            android:id="@+id/matchDistance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignStart="@+id/card_title"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

    </RelativeLayout>

</android.support.v7.widget.CardView>